force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Filter_Criteria__c</fullName>
    <description>This field is optional and is populated by the Section Builder tool. The field denotes whether a section configuration should return only records that meet the specified criteria. The value should use appropriate syntax for the WHERE clause of a SOQL query. The default value is empty and returns all records.</description>
    <inlineHelpText>This field is optional and is populated by the Section Builder tool. The field denotes whether a tier should return only records that meet the specified criteria. The value should use appropriate syntax for the WHERE clause of a SOQL query.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>