force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Offset_By_Limit__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Offset_By_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is populated by an administrator. The default value is false, which denotes that the value of nFORCE__Limit__c is a hard set limit. When updated to true, the field enables returning offset records with appropriate section resource.</description>
    <inlineHelpText>This field is optional and is populated by an administrator. The default value is false, which denotes that the value of Limit is a hard set limit. When updated to true, the field enables returning offset records with appropriate section resource.</inlineHelpText>
    <label>Offset By Limit</label>
    <type>Checkbox</type>
</CustomField>