force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Sort_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Sort_Criteria__c</fullName>
    <description>This field is optional and is populated by the Section Builder tool. The field denotes whether a section configuration should return records in a specified sorted order. The value should use appropriate syntax for the ORDER BY clause of a SOQL query. The default value is empty and returns records in no specific order.</description>
    <inlineHelpText>This field is optional and is populated by the Section Builder tool. The field denotes whether a tier should return records in a specified sorted order. The value should use appropriate syntax for the ORDER BY clause of a SOQL query.</inlineHelpText>
    <label>Sort Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>