force-app/main/default/objects/nFORCE__Section_Configuration__c/fields/nFORCE__Unique__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is populated by the Section Builder tool. This field denotes whether a section configuration should return only unique records.  When the value is set to true, the view generator will respect the setting and generate appropriate html markup. In a hierarchy of dependent section configurations, only a single record should have a true value to ensure proper markup is generated. The default value is false and will result in view generator creating markup that lists all returned records.</description>
    <inlineHelpText>This field is optional and is populated by the Section Builder tool. This field denotes whether a tier should return only unique records. When the value is set to true, the generated html code will respect the setting.</inlineHelpText>
    <label>Unique</label>
    <type>Checkbox</type>
</CustomField>